Strategy revenue - Entity, ETL

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -349,6 +349,10 @@
     <Compile Include="MigrationsTD\201701161616211_Mig_Revenue.Designer.cs">
       <DependentUpon>201701161616211_Mig_Revenue.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201701191639153_Mig_StrategyRevenue.cs" />
+    <Compile Include="MigrationsTD\201701191639153_Mig_StrategyRevenue.Designer.cs">
+      <DependentUpon>201701191639153_Mig_StrategyRevenue.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -570,6 +574,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201701161616211_Mig_Revenue.resx">
       <DependentUpon>201701161616211_Mig_Revenue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201701191639153_Mig_StrategyRevenue.resx">
+      <DependentUpon>201701191639153_Mig_StrategyRevenue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
