--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1025,6 +1025,7 @@
     <Content Include="Areas\AB\Views\Clients\Edit.cshtml" />
     <Content Include="Areas\AB\Views\ClientAccounts\Edit.cshtml" />
     <Content Include="Areas\AB\Views\Clients\Show.cshtml" />
+    <Content Include="Areas\AB\Views\Dashboard\Client.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
