Show/edit payments

--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Areas\AB\Controllers\AccountBudgetsController.cs" />
     <Compile Include="Areas\AB\Controllers\ClientAccountsController.cs" />
     <Compile Include="Areas\AB\Controllers\ClientBudgetsController.cs" />
+    <Compile Include="Areas\AB\Controllers\ClientPaymentsController.cs" />
     <Compile Include="Areas\AB\Controllers\ClientsController.cs" />
     <Compile Include="Areas\AB\Controllers\DashboardController.cs" />
     <Compile Include="Areas\AB\Models\DashboardVM.cs" />
@@ -842,6 +843,7 @@
   <ItemGroup>
     <Folder Include="Areas\AB\Views\AccountBudgets\" />
     <Folder Include="Areas\AB\Views\ClientBudgets\" />
+    <Folder Include="Areas\AB\Views\ClientPayments\" />
     <Folder Include="Areas\RevTrack\Models\" />
     <Folder Include="Areas\RevTrack\Views\Shared\" />
     <Folder Include="Views\Test\" />
