--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -219,6 +219,10 @@
     <Compile Include="MigrationsAB\201701172250032_Mig_ClientPayment.Designer.cs">
       <DependentUpon>201701172250032_Mig_ClientPayment.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsAB\201701251554500_Mig_ClientPaymentBit.cs" />
+    <Compile Include="MigrationsAB\201701251554500_Mig_ClientPaymentBit.Designer.cs">
+      <DependentUpon>201701251554500_Mig_ClientPaymentBit.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsAB\Configuration.cs" />
     <Compile Include="MigrationsRT\201611292020284_InitialCreate.cs" />
     <Compile Include="MigrationsRT\201611292020284_InitialCreate.Designer.cs">
@@ -478,6 +482,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsAB\201701172250032_Mig_ClientPayment.resx">
       <DependentUpon>201701172250032_Mig_ClientPayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsAB\201701251554500_Mig_ClientPaymentBit.resx">
+      <DependentUpon>201701251554500_Mig_ClientPaymentBit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsRT\201611292020284_InitialCreate.resx">
       <DependentUpon>201611292020284_InitialCreate.cs</DependentUpon>
