--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Entities\AB\Client.cs" />
     <Compile Include="Entities\AB\ClientAccount.cs" />
     <Compile Include="Entities\AB\ClientPayment.cs" />
+    <Compile Include="Entities\AB\ExtraItem.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Entities\AB\Job.cs" />
     <Compile Include="Entities\AdRoll\Ad.cs" />
     <Compile Include="Entities\AdRoll\AdDailySummary.cs" />
@@ -227,6 +230,12 @@
     <Compile Include="MigrationsAB\201701251653334_Mig_Job.cs" />
     <Compile Include="MigrationsAB\201701251653334_Mig_Job.Designer.cs">
       <DependentUpon>201701251653334_Mig_Job.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsAB\201701251946452_Mig_ExtraItem.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="MigrationsAB\201701251946452_Mig_ExtraItem.Designer.cs">
+      <DependentUpon>201701251946452_Mig_ExtraItem.cs</DependentUpon>
     </Compile>
     <Compile Include="MigrationsAB\Configuration.cs" />
     <Compile Include="MigrationsRT\201611292020284_InitialCreate.cs" />
@@ -493,6 +502,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsAB\201701251653334_Mig_Job.resx">
       <DependentUpon>201701251653334_Mig_Job.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsAB\201701251946452_Mig_ExtraItem.resx">
+      <DependentUpon>201701251946452_Mig_ExtraItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsRT\201611292020284_InitialCreate.resx">
       <DependentUpon>201611292020284_InitialCreate.cs</DependentUpon>
