--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -179,6 +179,7 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Areas\AB\ABAreaRegistration.cs" />
+    <Compile Include="Areas\AB\Controllers\AcctPaymentsController.cs" />
     <Compile Include="Areas\AB\Controllers\ProtoCampaignsController.cs" />
     <Compile Include="Areas\AB\Controllers\ClientAccountsController.cs" />
     <Compile Include="Areas\AB\Controllers\ClientBudgetsController.cs" />
@@ -1036,6 +1037,8 @@
     <Content Include="Areas\AB\Views\ProtoCampaigns\Index.cshtml" />
     <Content Include="Areas\AB\Views\ProtoCampaigns\Edit.cshtml" />
     <Content Include="Areas\AB\Views\Clients\ShowX.cshtml" />
+    <Content Include="Areas\AB\Views\ClientAccounts\Show.cshtml" />
+    <Content Include="Areas\AB\Views\AcctPayments\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
