--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Areas\AB\Controllers\DashboardController.cs" />
     <Compile Include="Areas\AB\Controllers\JobsController.cs" />
     <Compile Include="Areas\AB\Controllers\SpendBucketsController.cs" />
+    <Compile Include="Areas\AB\Controllers\VendorsController.cs" />
     <Compile Include="Areas\AB\Models\DashboardVM.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\CampStatsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\DailySummariesController.cs" />
@@ -1044,6 +1045,7 @@
     <Content Include="Areas\AB\Views\AcctPayments\Index.cshtml" />
     <Content Include="Areas\AB\Views\Campaigns\BucketList.cshtml" />
     <Content Include="Areas\AB\Views\Campaigns\Index.cshtml" />
+    <Content Include="Areas\AB\Views\Vendors\Index.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
