--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Entities\AdRoll\AdDailySummary.cs" />
     <Compile Include="Entities\AdRoll\Advertisable.cs" />
     <Compile Include="Entities\Cake\Advertiser.cs" />
+    <Compile Include="Entities\Cake\CampSum.cs" />
     <Compile Include="Entities\Cake\Contact.cs" />
     <Compile Include="Entities\Cake\Offer.cs" />
     <Compile Include="Contexts\DAContext.cs" />
@@ -476,6 +477,10 @@
     <Compile Include="Migrations\201612191657217_Mig_ABClientId.Designer.cs">
       <DependentUpon>201612191657217_Mig_ABClientId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702241947054_Mig_CampSum.cs" />
+    <Compile Include="Migrations\201702241947054_Mig_CampSum.Designer.cs">
+      <DependentUpon>201702241947054_Mig_CampSum.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seed\ABSeeder.cs" />
@@ -723,6 +728,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612191657217_Mig_ABClientId.resx">
       <DependentUpon>201612191657217_Mig_ABClientId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702241947054_Mig_CampSum.resx">
+      <DependentUpon>201702241947054_Mig_CampSum.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
