PostClickRev & PostViewRev in uploads

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -426,6 +426,10 @@
     <Compile Include="MigrationsTD\201701191639153_Mig_StrategyRevenue.Designer.cs">
       <DependentUpon>201701191639153_Mig_StrategyRevenue.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201703031654359_Mig_ColMapRevenue.cs" />
+    <Compile Include="MigrationsTD\201703031654359_Mig_ColMapRevenue.Designer.cs">
+      <DependentUpon>201703031654359_Mig_ColMapRevenue.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -699,6 +703,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201701191639153_Mig_StrategyRevenue.resx">
       <DependentUpon>201701191639153_Mig_StrategyRevenue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201703031654359_Mig_ColMapRevenue.resx">
+      <DependentUpon>201703031654359_Mig_ColMapRevenue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
