--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Entities\Cake\OfferType.cs" />
     <Compile Include="Entities\Cake\Role.cs" />
     <Compile Include="Entities\Cake\Vertical.cs" />
+    <Compile Include="Entities\Currency.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Entities\DBM\Creative.cs" />
     <Compile Include="Entities\DBM\CreativeDailySummary.cs" />
     <Compile Include="Entities\DBM\InsertionOrder.cs" />
@@ -495,9 +498,16 @@
     <Compile Include="Migrations\201703012028456_Mig_OfferContract.Designer.cs">
       <DependentUpon>201703012028456_Mig_OfferContract.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703062015043_Mig_Currency.cs" />
+    <Compile Include="Migrations\201703062015043_Mig_Currency.Designer.cs">
+      <DependentUpon>201703062015043_Mig_Currency.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seed\ABSeeder.cs" />
+    <Compile Include="Seed\DASeeder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Seed\TDSeeder.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -754,6 +764,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703012028456_Mig_OfferContract.resx">
       <DependentUpon>201703012028456_Mig_OfferContract.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703062015043_Mig_Currency.resx">
+      <DependentUpon>201703062015043_Mig_Currency.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
